p2/calc.output
Terminals unused in grammar

   ID_BOOL
   AND
   NEG
   OR


Grammar

    0 $accept: programa $end

    1 programa: lista_declaraciones
    2         | lista_sentencias

    3 lista_declaraciones: %empty

    4 lista_sentencias: lista_sentencias sentencia
    5                 | sentencia

    6 sentencia: FIN_SENTENCIA
    7          | expresion FIN_SENTENCIA
    8          | asignacion FIN_SENTENCIA

    9 asignacion: ID ASSIGN expresion

   10 expresion: expresion_aritmetica

   11 expresion_aritmetica: operacion_aritm_prec1
   12                     | expresion_aritmetica SUM operacion_aritm_prec1
   13                     | expresion_aritmetica REST operacion_aritm_prec1
   14                     | SUM operacion_aritm_prec1
   15                     | REST operacion_aritm_prec1

   16 operacion_aritm_prec1: operacion_aritm_prec2
   17                      | operacion_aritm_prec1 MUL operacion_aritm_prec2
   18                      | operacion_aritm_prec1 DIV operacion_aritm_prec2
   19                      | operacion_aritm_prec1 MOD operacion_aritm_prec2

   20 operacion_aritm_prec2: operacion_aritm_base
   21                      | operacion_aritm_prec2 POTENCIA operacion_aritm_base

   22 operacion_aritm_base: ABRIR_PAR expresion_aritmetica CERRAR_PAR
   23                     | INTEGER
   24                     | REAL
   25                     | ID_ARITM


Terminals, with rules where they appear

$end (0) 0
error (256)
ID <variable> (258) 9
ID_ARITM <variable> (259) 25
ID_BOOL <variable> (260)
INTEGER <entero> (261) 23
REAL <real> (262) 24
ASSIGN (263) 9
POTENCIA (264) 21
SUM (265) 12 14
REST (266) 13 15
MUL (267) 17
DIV (268) 18
MOD (269) 19
AND (270)
NEG (271)
OR (272)
FIN_SENTENCIA (273) 6 7 8
ABRIR_PAR (274) 22
CERRAR_PAR (275) 22


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
programa (22)
    on left: 1 2, on right: 0
lista_declaraciones (23)
    on left: 3, on right: 1
lista_sentencias (24)
    on left: 4 5, on right: 2 4
sentencia (25)
    on left: 6 7 8, on right: 4 5
asignacion (26)
    on left: 9, on right: 8
expresion <expr> (27)
    on left: 10, on right: 7 9
expresion_aritmetica <expr> (28)
    on left: 11 12 13 14 15, on right: 10 12 13 22
operacion_aritm_prec1 <expr> (29)
    on left: 16 17 18 19, on right: 11 12 13 14 15 17 18 19
operacion_aritm_prec2 <expr> (30)
    on left: 20 21, on right: 16 17 18 19 21
operacion_aritm_base <expr> (31)
    on left: 22 23 24 25, on right: 20 21


State 0

    0 $accept: . programa $end

    ID             shift, and go to state 1
    ID_ARITM       shift, and go to state 2
    INTEGER        shift, and go to state 3
    REAL           shift, and go to state 4
    SUM            shift, and go to state 5
    REST           shift, and go to state 6
    FIN_SENTENCIA  shift, and go to state 7
    ABRIR_PAR      shift, and go to state 8

    $default  reduce using rule 3 (lista_declaraciones)

    programa               go to state 9
    lista_declaraciones    go to state 10
    lista_sentencias       go to state 11
    sentencia              go to state 12
    asignacion             go to state 13
    expresion              go to state 14
    expresion_aritmetica   go to state 15
    operacion_aritm_prec1  go to state 16
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 1

    9 asignacion: ID . ASSIGN expresion

    ASSIGN  shift, and go to state 19


State 2

   25 operacion_aritm_base: ID_ARITM .

    $default  reduce using rule 25 (operacion_aritm_base)


State 3

   23 operacion_aritm_base: INTEGER .

    $default  reduce using rule 23 (operacion_aritm_base)


State 4

   24 operacion_aritm_base: REAL .

    $default  reduce using rule 24 (operacion_aritm_base)


State 5

   14 expresion_aritmetica: SUM . operacion_aritm_prec1

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_prec1  go to state 20
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 6

   15 expresion_aritmetica: REST . operacion_aritm_prec1

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_prec1  go to state 21
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 7

    6 sentencia: FIN_SENTENCIA .

    $default  reduce using rule 6 (sentencia)


State 8

   22 operacion_aritm_base: ABRIR_PAR . expresion_aritmetica CERRAR_PAR

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    SUM        shift, and go to state 5
    REST       shift, and go to state 6
    ABRIR_PAR  shift, and go to state 8

    expresion_aritmetica   go to state 22
    operacion_aritm_prec1  go to state 16
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 9

    0 $accept: programa . $end

    $end  shift, and go to state 23


State 10

    1 programa: lista_declaraciones .

    $default  reduce using rule 1 (programa)


State 11

    2 programa: lista_sentencias .
    4 lista_sentencias: lista_sentencias . sentencia

    ID             shift, and go to state 1
    ID_ARITM       shift, and go to state 2
    INTEGER        shift, and go to state 3
    REAL           shift, and go to state 4
    SUM            shift, and go to state 5
    REST           shift, and go to state 6
    FIN_SENTENCIA  shift, and go to state 7
    ABRIR_PAR      shift, and go to state 8

    $default  reduce using rule 2 (programa)

    sentencia              go to state 24
    asignacion             go to state 13
    expresion              go to state 14
    expresion_aritmetica   go to state 15
    operacion_aritm_prec1  go to state 16
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 12

    5 lista_sentencias: sentencia .

    $default  reduce using rule 5 (lista_sentencias)


State 13

    8 sentencia: asignacion . FIN_SENTENCIA

    FIN_SENTENCIA  shift, and go to state 25


State 14

    7 sentencia: expresion . FIN_SENTENCIA

    FIN_SENTENCIA  shift, and go to state 26


State 15

   10 expresion: expresion_aritmetica .
   12 expresion_aritmetica: expresion_aritmetica . SUM operacion_aritm_prec1
   13                     | expresion_aritmetica . REST operacion_aritm_prec1

    SUM   shift, and go to state 27
    REST  shift, and go to state 28

    $default  reduce using rule 10 (expresion)


State 16

   11 expresion_aritmetica: operacion_aritm_prec1 .
   17 operacion_aritm_prec1: operacion_aritm_prec1 . MUL operacion_aritm_prec2
   18                      | operacion_aritm_prec1 . DIV operacion_aritm_prec2
   19                      | operacion_aritm_prec1 . MOD operacion_aritm_prec2

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30
    MOD  shift, and go to state 31

    $default  reduce using rule 11 (expresion_aritmetica)


State 17

   16 operacion_aritm_prec1: operacion_aritm_prec2 .
   21 operacion_aritm_prec2: operacion_aritm_prec2 . POTENCIA operacion_aritm_base

    POTENCIA  shift, and go to state 32

    $default  reduce using rule 16 (operacion_aritm_prec1)


State 18

   20 operacion_aritm_prec2: operacion_aritm_base .

    $default  reduce using rule 20 (operacion_aritm_prec2)


State 19

    9 asignacion: ID ASSIGN . expresion

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    SUM        shift, and go to state 5
    REST       shift, and go to state 6
    ABRIR_PAR  shift, and go to state 8

    expresion              go to state 33
    expresion_aritmetica   go to state 15
    operacion_aritm_prec1  go to state 16
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 20

   14 expresion_aritmetica: SUM operacion_aritm_prec1 .
   17 operacion_aritm_prec1: operacion_aritm_prec1 . MUL operacion_aritm_prec2
   18                      | operacion_aritm_prec1 . DIV operacion_aritm_prec2
   19                      | operacion_aritm_prec1 . MOD operacion_aritm_prec2

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30
    MOD  shift, and go to state 31

    $default  reduce using rule 14 (expresion_aritmetica)


State 21

   15 expresion_aritmetica: REST operacion_aritm_prec1 .
   17 operacion_aritm_prec1: operacion_aritm_prec1 . MUL operacion_aritm_prec2
   18                      | operacion_aritm_prec1 . DIV operacion_aritm_prec2
   19                      | operacion_aritm_prec1 . MOD operacion_aritm_prec2

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30
    MOD  shift, and go to state 31

    $default  reduce using rule 15 (expresion_aritmetica)


State 22

   12 expresion_aritmetica: expresion_aritmetica . SUM operacion_aritm_prec1
   13                     | expresion_aritmetica . REST operacion_aritm_prec1
   22 operacion_aritm_base: ABRIR_PAR expresion_aritmetica . CERRAR_PAR

    SUM         shift, and go to state 27
    REST        shift, and go to state 28
    CERRAR_PAR  shift, and go to state 34


State 23

    0 $accept: programa $end .

    $default  accept


State 24

    4 lista_sentencias: lista_sentencias sentencia .

    $default  reduce using rule 4 (lista_sentencias)


State 25

    8 sentencia: asignacion FIN_SENTENCIA .

    $default  reduce using rule 8 (sentencia)


State 26

    7 sentencia: expresion FIN_SENTENCIA .

    $default  reduce using rule 7 (sentencia)


State 27

   12 expresion_aritmetica: expresion_aritmetica SUM . operacion_aritm_prec1

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_prec1  go to state 35
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 28

   13 expresion_aritmetica: expresion_aritmetica REST . operacion_aritm_prec1

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_prec1  go to state 36
    operacion_aritm_prec2  go to state 17
    operacion_aritm_base   go to state 18


State 29

   17 operacion_aritm_prec1: operacion_aritm_prec1 MUL . operacion_aritm_prec2

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_prec2  go to state 37
    operacion_aritm_base   go to state 18


State 30

   18 operacion_aritm_prec1: operacion_aritm_prec1 DIV . operacion_aritm_prec2

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_prec2  go to state 38
    operacion_aritm_base   go to state 18


State 31

   19 operacion_aritm_prec1: operacion_aritm_prec1 MOD . operacion_aritm_prec2

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_prec2  go to state 39
    operacion_aritm_base   go to state 18


State 32

   21 operacion_aritm_prec2: operacion_aritm_prec2 POTENCIA . operacion_aritm_base

    ID_ARITM   shift, and go to state 2
    INTEGER    shift, and go to state 3
    REAL       shift, and go to state 4
    ABRIR_PAR  shift, and go to state 8

    operacion_aritm_base  go to state 40


State 33

    9 asignacion: ID ASSIGN expresion .

    $default  reduce using rule 9 (asignacion)


State 34

   22 operacion_aritm_base: ABRIR_PAR expresion_aritmetica CERRAR_PAR .

    $default  reduce using rule 22 (operacion_aritm_base)


State 35

   12 expresion_aritmetica: expresion_aritmetica SUM operacion_aritm_prec1 .
   17 operacion_aritm_prec1: operacion_aritm_prec1 . MUL operacion_aritm_prec2
   18                      | operacion_aritm_prec1 . DIV operacion_aritm_prec2
   19                      | operacion_aritm_prec1 . MOD operacion_aritm_prec2

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30
    MOD  shift, and go to state 31

    $default  reduce using rule 12 (expresion_aritmetica)


State 36

   13 expresion_aritmetica: expresion_aritmetica REST operacion_aritm_prec1 .
   17 operacion_aritm_prec1: operacion_aritm_prec1 . MUL operacion_aritm_prec2
   18                      | operacion_aritm_prec1 . DIV operacion_aritm_prec2
   19                      | operacion_aritm_prec1 . MOD operacion_aritm_prec2

    MUL  shift, and go to state 29
    DIV  shift, and go to state 30
    MOD  shift, and go to state 31

    $default  reduce using rule 13 (expresion_aritmetica)


State 37

   17 operacion_aritm_prec1: operacion_aritm_prec1 MUL operacion_aritm_prec2 .
   21 operacion_aritm_prec2: operacion_aritm_prec2 . POTENCIA operacion_aritm_base

    POTENCIA  shift, and go to state 32

    $default  reduce using rule 17 (operacion_aritm_prec1)


State 38

   18 operacion_aritm_prec1: operacion_aritm_prec1 DIV operacion_aritm_prec2 .
   21 operacion_aritm_prec2: operacion_aritm_prec2 . POTENCIA operacion_aritm_base

    POTENCIA  shift, and go to state 32

    $default  reduce using rule 18 (operacion_aritm_prec1)


State 39

   19 operacion_aritm_prec1: operacion_aritm_prec1 MOD operacion_aritm_prec2 .
   21 operacion_aritm_prec2: operacion_aritm_prec2 . POTENCIA operacion_aritm_base

    POTENCIA  shift, and go to state 32

    $default  reduce using rule 19 (operacion_aritm_prec1)


State 40

   21 operacion_aritm_prec2: operacion_aritm_prec2 POTENCIA operacion_aritm_base .

    $default  reduce using rule 21 (operacion_aritm_prec2)
